test/syc/good/enumuplus.c
/*
 * Unary plus with enum
 */


enum e {
    e1
};

enum e x;

void eplus(void)
{
	x = +x;
}
