test/syc/bad/enumdupi.c
/*
 * Duplicate identifier 'e1'.
 */

int e1;

enum e {
	e1
};
